<resources>
    <string name="app_name">EmployeeAdmin</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="form_fragment_label">Form Fragment</string>
    <string name="roles_fragment_label">Roles Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- strings displayed in screens -->
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="roles">ROLES</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>


    <!-- roles list -->
    <string-array name="roles_array">
        <item>Administrator</item>
        <item>Accounts Payable</item>
        <item>Accounts Receivable</item>
        <item>Employee Benefits</item>
        <item>General Ledger</item>
        <item>Payroll</item>
        <item>Inventory</item>
        <item>Production</item>
        <item>Quality Control</item>
        <item>Sales</item>
        <item>Orders</item>
        <item>Customers</item>
        <item>Shipping</item>
        <item>Returns</item>
    </string-array>

    <!-- departments list -->
    <string-array name="departments_array">
        <item>Accounting</item>
        <item>Sales</item>
        <item>Plant</item>
        <item>Shipping</item>
        <item>Quality Control</item>
    </string-array>

</resources>