<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/firstNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="14sp"
            android:hint="@string/first_name"
            />

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:hint="@string/email"
            />


        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/password"
             />

        <Spinner
            android:id="@+id/departmentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/lastNameTxt"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            />


        <EditText
            android:id="@+id/userNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:hint="@string/user_name"/>


        <EditText
            android:id="@+id/confirmPasswordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/confirm_password" />

        <Button
            android:id="@+id/rolesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/roles"
            android:shadowColor="@android:color/darker_gray" />

    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/bottomLayout"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:id="@+id/cancelBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="@android:color/holo_green_light"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:id="@+id/okBtn"/>
    </LinearLayout>

</LinearLayout>